--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.4.4",
     "@mui/x-data-grid": "^5.5.1",
+    "axios": "^0.26.0",
     "D": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
