--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "D": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "recharts": "^2.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
